--- a/web.html
+++ b/web.html
@@ -3,6 +3,9 @@
     <head>
         <body>
             <h1>Eduardo Sanchez</h1>
+            <h2> About me </h2>
+            <h3> Projects </h3>
+            <h4>Contact me </h4>
         </body>
     </head>
 </html>
