--- a/web.html
+++ b/web.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <body>
-            <h1>Eduardo Sanchez</h1>
-            <h2> About me </h2>
-            <h3> Projects </h3>
-            <h4>Contact me </h4>
-        </body>
+        <title>Eduardo Sanchez Portfolio</title>
+        <link rel="stylesheet" href="app.css">
     </head>
+    <body>
+        <header>
+            <h1>Eduardo Sanchez</h1>
+            <div class="right-section">
+                <h2>About me</h2>
+                <h3>Projects</h3>
+                <h4>Contact info</h4>
+            </div>
+        </header>
+    </body>
 </html>
