--- a/web.html
+++ b/web.html
@@ -8,10 +8,29 @@
         <header>
             <h1>Eduardo Sanchez</h1>
             <div class="right-section">
-                <h2>About me</h2>
-                <h3>Projects</h3>
-                <h4>Contact info</h4>
+                <a href="#about" class="button">About me</a>
+                <a href="#projects" class="button">Projects</a>
+                <a href="#contact" class="button">Contact Info</a>
             </div>
         </header>
+        <div class="profile-pic">
+            <img src="professinal profile picture.PNG" alt="profile picture">
+            <p class="profile-text">Hello, My name is </p>
+            <p class="name">Eduardo Sanchez</p>
+        </div>
+        <section id="about">
+            <h2>About Me</h2>
+            <p> Hello,</p>
+        </section>
+
+        <section id="projects">
+            <h2>Projects</h2>
+            <p> Projcest</p>
+        </section>
+
+        <section id="contact">
+            <h3>Contact Info</h3>
+            <p>Contact Info</p>
+        </section>
     </body>
 </html>
